Sun Jul 25 16:43:52 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* bsemidireceiver.cc: Properly NULL initialize the module list in the
	constructor of struct ControlValue.  This fixes the segfaults on AMD64
	that occur when playing the demosong (and probably others).

Sat Jul 24 19:53:33 2004  Tim Janik  <timj@gtk.org>

        * bstsnifferscope.[hc]: fixed up drawing code to show time-scrolling
        peak values. overshoot values are drawn in red.

        * bsttrackroll.c: arrenged for more scope space, fixed left-panel layout.

        * beast-gtk/gxk/gxkutils.[hc]: added convenience functions
        gdk_draw_hline() and gdk_draw_vline().

Sat Jul 24 20:00:22 2004  Tim Janik  <timj@gtk.org>

	* bseprobe.idl: 
	* bseprobe.cc: added signal energie to probed values. fixed up
	value colelction and min/max for discarded modules.

Sat Jul 24 11:40:50 2004  Tim Janik  <timj@gtk.org>

	* bsesniffer.idl:
	* bsesniffer.cc: removed BseSniffer code.

Sat Jul 24 08:16:14 2004  Tim Janik  <timj@gtk.org>

	* bseengine.[hc]: added n_delay and n_probes arguments to
	bse_job_probe_request(), so the user can request block sizes
	and probe spacings.

	* bseenginenode.h:
	* bseenginemaster.c: implemented variable length probe blocks and
	probe block spacings. 

	* bseprobe.cc: for now, request engine block size big probe
	blocks, with a 3/4 spacing ratio. fixed request handling.

Sat Jul 24 05:33:58 2004  Tim Janik  <timj@gtk.org>

	* gsldefs.h: removed if_reject() and if_expect() variants.
	G_LIKELY() and G_UNLIKELY() may be used instead. provide
	LIKELY(), ISLIKELY() and UNLIKELY() for convenience.

	* *.[hc]*: fixed if_reject() and if_expect() usage.

Fri Jul 23 20:05:53 2004  Tim Janik  <timj@gtk.org>

	* *.h, *.c, *.cc: globally renamed GSL Engine to BSE Engine.

Fri Jul 23 19:05:23 2004  Tim Janik  <timj@gtk.org>

	* *.[hc]:
	* Makefile.am: use bseengine*.[hc] instead of gsl*.[hc] files.

	* gslengine.[hc]:
	* gslopnode.h:
	* gsloputil.[hc]:
	* gslopmaster.[hc]: